// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeadTag during client mounts and unmounts title 1`] = `
Array [
  <title>
    Static
  </title>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`HeadTag during client mounts and unmounts title 2`] = `
Array [
  <title>
    Dynamic
  </title>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`HeadTag during client mounts and unmounts title 3`] = `
Array [
  <title>
    Static
  </title>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`HeadTag during client renders only the last meta with the same name 1`] = `
Array [
  <meta>
    Static 1
  </meta>,
  <meta
    name="name1"
  >
    Static 2
  </meta>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`HeadTag during client renders only the last meta with the same name 2`] = `
Array [
  <meta>
    Static 1
  </meta>,
  <meta
    name="name1"
  >
    Dynamic 1
  </meta>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`HeadTag during client renders only the last meta with the same name 3`] = `
Array [
  <meta
    name="name1"
  >
    Dynamic 1
  </meta>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <meta>
    Dynamic 2
  </meta>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`HeadTag during client renders only the last meta with the same name 4`] = `
Array [
  <meta>
    Static 1
  </meta>,
  <meta
    name="name1"
  >
    Dynamic 1
  </meta>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`HeadTag during client renders only the last meta with the same name 5`] = `
Array [
  <meta>
    Static 1
  </meta>,
  <meta
    name="name1"
  >
    Static 2
  </meta>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
  <button
    onClick={[Function]}
  >
    toggle
  </button>,
]
`;

exports[`HeadTag during client renders only the last title 1`] = `
Array [
  <div />,
  <div />,
  <div>
    <title>
      Title 3
    </title>
  </div>,
]
`;

exports[`HeadTag during client switches between titles 1`] = `
Array [
  <title>
    Static
  </title>,
  <button
    onClick={[Function]}
  >
    0
  </button>,
  <button
    onClick={[Function]}
  >
    1
  </button>,
]
`;

exports[`HeadTag during client switches between titles 2`] = `
Array [
  <title>
    Title 1
  </title>,
  <button
    onClick={[Function]}
  >
    0
  </button>,
  <button
    onClick={[Function]}
  >
    1
  </button>,
]
`;

exports[`HeadTag during client switches between titles 3`] = `
Array [
  <button
    onClick={[Function]}
  >
    0
  </button>,
  <title>
    Title 2
  </title>,
  <button
    onClick={[Function]}
  >
    1
  </button>,
]
`;

exports[`HeadTag during client switches between titles 4`] = `
Array [
  <title>
    Title 1
  </title>,
  <button
    onClick={[Function]}
  >
    0
  </button>,
  <button
    onClick={[Function]}
  >
    1
  </button>,
]
`;
